--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "angular2-toaster",
-  "version": "4.0.1",
+  "name": "angular5-toaster",
+  "version": "1.0.0",
   "description": "An Angular Toaster Notification library based on AngularJS-Toaster",
-  "main": "bundles/angular2-toaster.umd.js",
-  "module": "angular2-toaster.js",
-  "typings": "angular2-toaster.d.ts",
+  "main": "bundles/angular5-toaster.umd.js",
+  "module": "angular5-toaster.js",
+  "typings": "angular5-toaster.d.ts",
   "scripts": {
     "start": "npm run test && http-server -c-1 -o -p 8875 .",
     "prebuild": "rimraf ./dist && npm run lint",
     "build": "node_modules/.bin/ngc -p ./tsconfig-aot.json && npm run rollup",
     "rollup": "node_modules/.bin/rollup -c ./config/rollup.config.js && npm run uglify",
-    "uglify": "node_modules/.bin/uglifyjs ./dist/bundles/angular2-toaster.umd.js -o ./dist/bundles/angular2-toaster.umd.min.js && npm run copy",
+    "uglify": "node_modules/.bin/uglifyjs ./dist/bundles/angular5-toaster.umd.js -o ./dist/bundles/angular5-toaster.umd.min.js && npm run copy",
     "copy": "cpx package.json dist && cpx LICENSE dist && cpx README.md dist && cpx ./src/toaster.css dist",
     "lint": "node_modules/.bin/tslint -c tslint.json 'src/**/*.ts'",
     "test": "karma start karma.conf.js"
@@ -19,27 +19,28 @@
     "angular",
     "angular2",
     "angular4",
+    "angular5",
     "angularjs-toaster",
     "angular-toaster",
-    "angular2-toaster",
+    "angular5-toaster",
     "toast",
     "toaster",
     "notification",
     "growl"
   ],
-  "author": "Stabzs",
+  "author": "Karmegam Pandi",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stabzs/Angular2-Toaster.git"
+    "url": "https://github.com/karclouds/Angular5-Toaster.git"
   },
   "bugs": {
-    "url": "https://github.com/stabzs/Angular2-Toaster/issues"
+    "url": "https://github.com/karclouds/Angular5-Toaster/issues"
   },
   "peerDependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/common": ">=4.0.0 <=5.0.2",
+    "@angular/compiler": ">=4.0.0 <=5.0.2",
+    "@angular/core": ">=4.0.0 <=5.0.2",
     "rxjs": "^5.0.0-beta.11"
   },
   "devDependencies": {
